[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzle-dsl"
version = "0.82.77"
description = "DAZZLE — declarative SaaS framework with built-in compliance (SOC 2, ISO 27001), provable RBAC, and graph features"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "DAZZLE Contributors"}
]
maintainers = [
    {name = "DAZZLE Contributors"}
]
keywords = [
    "dsl",
    "saas",
    "compliance",
    "soc2",
    "iso27001",
    "rbac",
    "graph",
    "openapi",
    "llm",
    "domain-modeling",
    "application-framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "markdown>=3.5",
    # psycopg3 is the single Postgres driver across the whole codebase (#1341):
    # the request-serving runtime (back/runtime/pg_backend.py), SQLAlchemy/Alembic
    # (postgresql+psycopg://), the tenant registry, AND the async `dazzle db` CLI
    # (dazzle.db.connection.get_connection → psycopg.AsyncConnection).
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "slowapi>=0.1.9",
    # faker is used by demo_data.DemoDataGenerator (realistic seed
    # fixtures) AND by testing.ux seed/form-fill paths (see #809).
    # Was previously guarded with a try/except — promoted to a
    # required dep so qualitative trials and demo boots produce
    # realistic strings instead of "UX first_name 2f828c".
    "faker>=20.0",
    # segno renders TOTP enrollment QR codes server-side in the 2FA setup
    # flow. Pure-Python, zero transitive deps. Previously the flow loaded
    # QR codes from api.qrserver.com, leaking the TOTP secret to a third
    # party (#829).
    "segno>=1.5",
    # bleach sanitises rich-text widget input on the server side
    # (#977 cycle 4). The client-side schema enforcement in
    # dz-richtext.js is a UX layer; bleach is the security boundary.
    # Allowlist sourced from src/dazzle/core/ir/richtext.py — drift
    # gated by tests/unit/test_richtext_allowlist_parity.py.
    "bleach>=6.0",
    # itsdangerous is required by Starlette's SessionMiddleware, which
    # Authlib's `authorize_redirect` uses to stash the `state` parameter
    # between SSO initiate and callback. Previously gated behind the
    # `sso` extras (#1054) but its absence broke test collection for
    # tests/integration/test_sso_routes.py on every CI run that didn't
    # install the SSO extras. Tiny package (~7KB), no transitive deps —
    # promoted to core to make the SSO flow + its tests work out of
    # the box.
    "itsdangerous>=2.1",
    # PyJWT backs the default-mounted bearer-token routes (/auth/token et
    # al., #1105). It lived only in the [mobile] extras while jwt_auth.py
    # deferred `import jwt` into method bodies — so on a clean install the
    # routes mounted at boot and 500'd at request time on a public
    # endpoint (#1362). Default-on feature's deps belong in the default
    # install; pure-Python, no transitive deps beyond typing.
    "PyJWT>=2.8.0",
    # fastapi was historically in the [serve] extras, but dazzle.core
    # transitively imports dazzle.back.runtime (via appspec_loader →
    # back.runtime.renderers.init → back.runtime/server.py → file_routes,
    # search_routes, etc.) which all have unconditional `from fastapi
    # import ...` at module level. Without fastapi in core deps, even
    # `dazzle --help` and `dazzle validate` crash on a vanilla
    # `pip install dazzle-dsl`. Promoted to core so the PyPI wheel
    # smoke-test (which only installs core deps) can import and run
    # the CLI. Pre-existing breakage caught by `gh run list` showing
    # red PyPI publish on every release back to at least v0.67.70.
    # MAL-2026-4750 flagged fastapi 0.136.3 for the `fastar` transitive dep
    # in the [standard] extra. Investigation (#1278) confirmed `fastar` is
    # a legitimate Rust-tar binding used by fastapi-cloud-cli for zstd-tar
    # upload bundling — not a typosquat, not malicious. We don't take
    # fastapi[standard] anywhere, so we never install fastar regardless.
    # CI's pip-audit suppresses the false-positive advisory by ID; the
    # version pin here is unrestricted. If you need fastapi[standard]
    # features downstream, prefer fastapi[standard-no-fastapi-cloud-cli]
    # which upstream provides specifically as the opt-out variant.
    "fastapi>=0.100.0",
    # tomli_w serialises TOML back to text for dazzle quality bootstrap,
    # which must read + merge-write pyproject.toml without losing unmanaged
    # tables. tomllib (stdlib, read-only) handles the read side; tomli_w
    # handles the write side. Pure-Python, zero transitive deps.
    "tomli_w>=1.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.21.0",
    "openai>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
lsp = [
    "pygls>=1.0.0",
    "lsprotocol>=2023.0.0",
]
graph = [
    "networkx>=3.0",
]
e2e = [
    # Playwright drives the browser-based UX walks (`dazzle ux verify
    # --interactions`). Pinned >=1.40 for the sync-API shape used in
    # cli/ux_interactions.py. NOTE: after `pip install 'dazzle-dsl[e2e]'`
    # you still need `playwright install chromium` to fetch the browser. (#1376)
    "playwright>=1.40",
]
compliance = [
    "weasyprint>=60.0",
    "markdown>=3.5",
]
sso = [
    # Authlib drives the OIDC / OAuth2 dance for Google + Microsoft
    # SSO (Phase 1.C). Pinned >=1.3 for the modern starlette
    # integration; <2 because the API surface is still evolving and
    # we want to absorb breaking changes intentionally.
    "authlib>=1.3.0,<2",
    # itsdangerous moved to core deps in v0.67.96 (#1054) — required
    # by Starlette's SessionMiddleware whether or not authlib is
    # installed. Kept here for documentation; pip dedupes.
    # cryptography: AES-GCM secret-at-rest for enterprise Connections
    # (auth Plan 4a, dazzle.back.runtime.auth.connection_crypto) — lazy-imported,
    # so core installs without [sso] are unaffected until a connection is used.
    "cryptography>=41.0.0",
    # dnspython: DNS-TXT domain-ownership verification for enterprise Connections
    # (auth Plan 4b.iv, dazzle.back.runtime.auth.domain_verification) — lazy-imported
    # inside DnspythonResolver, so core installs are unaffected until verify-domain runs.
    "dnspython>=2.0",
]
saml = [
    # python3-saml drives SP-initiated SAML 2.0 (auth Plan 5, dazzle.back.runtime.auth.
    # saml_provider) — it owns all XML parsing + signature validation (XXE / signature-
    # wrapping defenses), imported lazily inside NativeSAMLProvider._build_auth.
    # SEPARATE from [sso] because it needs the native libxmlsec1 (python-xmlsec / lxml):
    # keeping it out of [sso] means OIDC/SCIM installs stay pure-pip. Install the system
    # lib first (e.g. apt-get install libxmlsec1-dev pkg-config) then
    # `pip install 'dazzle-dsl[saml]'`.
    "python3-saml>=1.15",
]
signing = [
    # #1283 phase 2: native document signing primitive.
    # fpdf2 = pure-Python PDF generation (no system deps).
    # pyhanko = pure-Python PKCS#7 + PAdES B-T + RFC 3161 timestamps.
    # Pillow = signature PNG handling (pyhanko + fpdf2 both depend on it).
    # cryptography drives the ECDSA P-256 CA + signing cert chain in
    # dazzle.signing.cert (not in core deps — pulled in here).
    "fpdf2>=2.8.0",
    "pyhanko>=0.25.0",
    "Pillow>=10.0",
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-timeout>=2.2",
    "hypothesis>=6.82",
    "syrupy>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
    "requests>=2.31",
    "mutmut>=2.4",
    # MAL-2026-4750 flagged fastapi 0.136.3 for the `fastar` transitive dep
    # in the [standard] extra. Investigation (#1278) confirmed `fastar` is
    # a legitimate Rust-tar binding used by fastapi-cloud-cli for zstd-tar
    # upload bundling — not a typosquat, not malicious. We don't take
    # fastapi[standard] anywhere, so we never install fastar regardless.
    # CI's pip-audit suppresses the false-positive advisory by ID; the
    # version pin here is unrestricted. If you need fastapi[standard]
    # features downstream, prefer fastapi[standard-no-fastapi-cloud-cli]
    # which upstream provides specifically as the opt-out variant.
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",
]
# On-demand local OpenTelemetry tracing for `dazzle perf` (#1153 follow-on).
# Local-only by design — the bundled SQLite span exporter writes traces to
# `.dazzle/perf/<run-id>.db`. No OTLP collector required; users who want
# upstream collectors can pair this extra with their own exporter config.
perf = [
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
    "opentelemetry-instrumentation-psycopg>=0.48b0,<1",
    "opentelemetry-instrumentation-asyncio>=0.48b0,<1",
]
# OTLP HTTP push exporter for runtime tracing (#1192 slice 2).
# When ``DAZZLE_OTEL_ENDPOINT`` is set in the environment, the framework
# tracer attaches a ``BatchSpanProcessor(OTLPSpanExporter(...))`` alongside
# the local SQLite span exporter — see ``src/dazzle/perf/tracer.py``. The
# env var path is no-op without this extra installed (a single WARNING is
# logged naming the extra; the local SQLite path is unaffected).
observability = [
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
]
# Runtime server dependencies for `dazzle serve --local` (v0.34.3 — Issue #388)
serve = [
    # MAL-2026-4750 flagged fastapi 0.136.3 for the `fastar` transitive dep
    # in the [standard] extra. Investigation (#1278) confirmed `fastar` is
    # a legitimate Rust-tar binding used by fastapi-cloud-cli for zstd-tar
    # upload bundling — not a typosquat, not malicious. We don't take
    # fastapi[standard] anywhere, so we never install fastar regardless.
    # CI's pip-audit suppresses the false-positive advisory by ID; the
    # version pin here is unrestricted. If you need fastapi[standard]
    # features downstream, prefer fastapi[standard-no-fastapi-cloud-cli]
    # which upstream provides specifically as the opt-out variant.
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
]
# PostgreSQL deps moved to core dependencies (v0.28.0 — PG is the sole backend)
postgres = []
# Process execution backends (v0.24.0 - Issue #45)
temporal = [
    "temporalio>=1.4.0",
]
# Celery/Redis process adapter for Heroku deployments (v0.28.0)
celery = [
    "celery>=5.3.0",
    "redis>=5.0",
]
# Messaging adapters (v0.16.0 - Issue #29)
rabbitmq = ["aio-pika>=9.0"]
redis = ["redis>=5.0"]
kafka = ["aiokafka>=0.9"]
# All messaging adapters
messaging = [
    "aio-pika>=9.0",
    "redis>=5.0",
    "aiokafka>=0.9",
]
# Event system core (event bus, outbox/inbox, framework)
events = [
    "psycopg[binary]>=3.2",
]
# Pitch deck generation
pitch = [
    "python-pptx>=0.6.21",
    "matplotlib>=3.7.0",
]
# Viewport visual regression testing
viewport = [
    "Pillow>=10.0.0",
]
# TigerBeetle ledger integration (v0.5.0 - Issue #ledgers)
tigerbeetle = [
    "tigerbeetle>=0.16.0",
]
# Mobile authentication (JWT, OAuth2, Push)
mobile = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]
# Social authentication providers
social_auth = [
    "google-auth>=2.25.0",
    "httpx>=0.25.0",  # For OAuth2 flows
]
# Push notifications
push = [
    "firebase-admin>=6.2.0",
]
# All mobile features
mobile_full = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "google-auth>=2.25.0",
    "httpx>=0.25.0",
    "firebase-admin>=6.2.0",
]
# AWS services (S3 storage, SES email — #952 cycle 6)
aws = [
    "aioboto3>=13.0",
    "boto3>=1.35",
]
# SendGrid notification provider (#952 cycle 6).
# Optional — install with `pip install dazzle-dsl[sendgrid]` if your
# `[notifications] provider = "sendgrid"` block is in dazzle.toml.
sendgrid = [
    "sendgrid>=6.11",
]
# Internationalisation (#955 cycle 4+) — Babel for locale-aware
# date/number/currency formatting. Optional; without it the
# `format_date` / `format_number` / `format_currency` Jinja filters
# fall back to locale-independent output.
i18n = [
    "babel>=2.13",
]
# moto-based S3 mocks for storage primitive integration tests (#932 cycle 2).
# Pulled into the dev install via `pip install -e ".[dev,aws-test]"`. The
# in-memory FakeStorageProvider in dazzle_back.runtime.storage.testing
# covers most unit tests without this dep — moto is only needed for the
# small set of integration tests that exercise the real boto3 surface.
aws-test = [
    "boto3>=1.35",
    "moto[s3]>=5.0",
]

[project.urls]
Homepage = "https://github.com/manwithacat/dazzle"
Documentation = "https://github.com/manwithacat/dazzle/blob/main/docs"
Repository = "https://github.com/manwithacat/dazzle"
Issues = "https://github.com/manwithacat/dazzle/issues"
Changelog = "https://github.com/manwithacat/dazzle/blob/main/CHANGELOG.md"

# Console script entry point for `dazzle` command.
# Package name on PyPI: dazzle-dsl  |  Import name: dazzle
[project.scripts]
dazzle = "dazzle.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dazzle*"]
namespaces = false

[tool.setuptools.package-data]
dazzle = ["py.typed"]
"dazzle.examples" = ["**/*"]
# Alembic migration assets (#1308). The `dazzle db` CLI loads these by file
# path via `version_locations` / `script_location` — they are NOT importable
# modules, so without this entry they're dropped from the wheel: `script.py.mako`
# (autogenerate template → `revision --autogenerate` fails), `alembic.ini`, and
# crucially the framework BASELINE migrations under `versions/` (which has no
# `__init__.py`, so `packages.find` with `namespaces=false` never discovers it —
# every pip install was missing 0001–0004). The `versions/*.py` glob ships them
# as data files regardless of package status.
"dazzle.back.alembic" = ["*.mako", "*.ini", "versions/*.py"]
"dazzle.compliance" = ["css/*.css", "templates/*.html", "frameworks/*.yaml"]
"dazzle.lsp" = ["grammars/*.json"]
# Workspace chrome static assets — literal HTML+JS blobs the typed
# Fragment renderer emits verbatim (e.g. WorkspaceDrawer markup +
# IIFE script). Read at module-import time, then cached.
"dazzle.render.fragment.static" = ["*.html"]
# Dazzle UI runtime static files (JS, CSS). Post-#1055 (v0.67.98) the
# `dazzle_ui` top-level package was nested as `dazzle.ui` so all
# package-data keys reference the new path.
"dazzle.ui" = ["static/**/*.js", "static/**/*.css"]
"dazzle.ui.runtime.static" = ["**/*.js", "**/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/dazzle/back/tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (subprocess spawning, full validation)",
    "e2e: End-to-end tests for Dazzle runtime",
    "story: User story tests (FieldTest Hub)",
    "access_control: Permission/access control tests (FieldTest Hub)",
    "state_machine: State transition tests (FieldTest Hub)",
    "invariant: Business rule/invariant tests (FieldTest Hub)",
    "computed: Computed field tests (FieldTest Hub)",
    "personas: Persona-related tests (FieldTest Hub)",
    "data_management: Data reset/regenerate tests (FieldTest Hub)",
    "state: State persistence tests (FieldTest Hub)",
    "display: Display/UI element tests (FieldTest Hub)",
    "pra: Performance Reference App stress tests",
    "corpus: Parser corpus golden snapshot tests",
    "visual: Playwright-driven visual smoke tests (requires Chromium)",
    "tigerbeetle: TigerBeetle integration tests (requires running TigerBeetle)",
    "postgres: Tests requiring a live PostgreSQL connection (TEST_DATABASE_URL)",
    # Auto-generated test markers — emitted by `dazzle test dsl-generate`
    # and `dazzle test tier2-generate` per CRUD operation, surface mode,
    # tier, and validation kind. Per-entity / per-persona marks are also
    # emitted dynamically (one per entity name / persona id) and can't
    # be enumerated here — they're ignored via the filterwarnings rule
    # on `PytestUnknownMarkWarning` below.
    "create: Auto-generated marker for create-operation tests",
    "read: Auto-generated marker for read-operation tests",
    "update: Auto-generated marker for update-operation tests",
    "delete: Auto-generated marker for delete-operation tests",
    "list: Auto-generated marker for list-surface tests",
    "view: Auto-generated marker for view-surface tests",
    "edit: Auto-generated marker for edit-surface tests",
    "crud: Auto-generated marker for combined CRUD test groups",
    "tier2: Auto-generated Tier 2 (Playwright) test marker",
    "playwright: Tests that drive a real browser via Playwright",
    "navigation: Auto-generated marker for navigation-flow tests",
    "transition: Auto-generated marker for state-machine transition tests",
    "transitions: Plural variant of `transition` from older generator",
    "invalid_transition: Auto-generated marker for state-transition negative tests",
    "valid: Auto-generated marker for happy-path validation tests",
    "invalid: Auto-generated marker for negative-validation tests",
    "validation: Auto-generated marker for validation-rule tests",
    "format: Auto-generated marker for field-format validation tests",
    "required: Auto-generated marker for required-field validation tests",
    "reference: Auto-generated marker for FK-reference validation tests",
    "denied: Auto-generated marker for access-denied tests",
    "high_priority: Auto-generated marker for high-priority test groups",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Harmless: DSLLever.construct is a domain term (DSL construct path)
    # that coincidentally shadows a deprecated BaseModel.construct method.
    # See src/dazzle/testing/ux/reconciler.py docstring.
    "ignore:Field name \"construct\" in \"DSLLever\" shadows an attribute in parent \"BaseModel\":UserWarning",
    # Auto-generated tests (`dazzle test dsl-generate`, `tier2-generate`)
    # emit per-entity / per-persona marks (`@pytest.mark.task`,
    # `@pytest.mark.engineer`, etc.) that can't be enumerated in the
    # static `markers` list above. Suppressing the unknown-mark warning
    # keeps `dazzle conformance run` output clean — the static
    # categorical marks (CRUD, surface mode, validation kind) ARE
    # registered above for completion.
    "ignore::pytest.PytestUnknownMarkWarning",
]
# Coverage is opt-in for faster local runs. Use: pytest --cov=src/dazzle --cov-report=term-missing
# Fast local run: pytest -m "not slow and not e2e"
# CI runs with coverage enabled via command line

[tool.coverage.run]
source = ["src/dazzle"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "dazzle.lsp.server"
# pygls/lsprotocol don't have type stubs, so decorators and LanguageServer base are untyped
disallow_untyped_decorators = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "dazzle.mcp.server"
# MCP SDK decorators are untyped
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["dazzle.core.process.celery_tasks"]
# Celery decorators are untyped
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "dazzle.back.runtime.island_routes",
    "dazzle.back.runtime.debug_routes",
    "dazzle.back.runtime.event_explorer",
    "dazzle.back.runtime.audit_routes",
    "dazzle.back.runtime.test_routes",
    "dazzle.back.runtime.social_auth",
    "dazzle.back.runtime.jwt_middleware",
    "dazzle.back.runtime.route_generator",
    # #1361 final slice: the CRUD/graph handler factories moved out of
    # route_generator into handlers/* — the override moves with the code.
    "dazzle.back.runtime.handlers.*",
    "dazzle.back.runtime.auth.routes",
    "dazzle.back.runtime.auth.routes_2fa",
    "dazzle.back.runtime.auth.routes_jwt",
]
# FastAPI app.get/post decorators on closure-scoped routes are untyped (app: Any),
# and the create/update route factories annotate the request body with dynamically
# generated per-entity Pydantic schema classes (runtime variables) — which mypy
# cannot treat as static types (valid-type). These are inherent to FastAPI's
# runtime-driven body binding, not the (now-removed) optional-import shim.
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["valid-type"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
# Exclude bundled examples from linting (they may have auto-generated code)
exclude = [
    "src/dazzle/examples/*",
    # Third-party packages accidentally installed into src/
    "src/PIL/",
    "src/contourpy/",
    "src/cycler/",
    "src/dateutil/",
    "src/fontTools/",
    "src/kiwisolver/",
    "src/matplotlib/",
    "src/mpl_toolkits/",
    "src/numpy/",
    "src/packaging/",
    "src/pyparsing/",
    "src/share/",
    "src/bin/",
    "src/*.dist-info/",
    "src/six.py",
    "src/pylab.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "G004", # logging-f-string (use %-formatting for lazy evaluation)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg - standard Typer pattern (typer.Option/Argument)
    "B904",  # raise from err - style preference, not critical
    "B027",  # empty method in abstract class - intentional default implementations
    "B011",  # assert False in tests - pytest uses -O mode differently
]

[tool.ruff.lint.isort]
known-first-party = ["dazzle"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", "scripts"]
skips = [
    "B101",  # assert_used - we use asserts for type narrowing
    "B104",  # hardcoded_bind_all_interfaces - intentional for containerized apps
    "B110",  # try_except_pass - intentional for discovery patterns
    "B310",  # urllib_urlopen - we use with controlled localhost URLs only
    "B404",  # import_subprocess - we need subprocess for git, CLI tools
    "B601",  # shell injection - we use subprocess safely with list args
    "B602",  # subprocess_popen_with_shell_true - false positive, using for piping
    "B603",  # subprocess_without_shell - we intentionally avoid shell=True
    "B604",  # any_other_function_shell_true - using for npm/node commands
    "B607",  # start_process_with_partial_path - we use git/python which are in PATH
    "B608",  # hardcoded SQL - false positives on template strings
    "B311",  # random - used for demo simulation data, not security
]

# Post-#1044 (v0.67.92): djlint + jinja2 retired; the framework no
# longer ships any Jinja templates.
